objects/ExceptionLog__c.object
<CustomObject>
    <fields>
        <fullName>ApexTrigger__c</fullName>
        <label>Apex Trigger</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContextUser__c</fullName>
        <label>Context User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedToDefect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted To Defect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExceptionCode__c</fullName>
        <label>Exception Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionDescription__c</fullName>
        <label>Exception Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionDetails__c</fullName>
        <label>Exception Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionLogTimestamp__c</fullName>
        <label>ExceptionLog Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <label>Exception Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <label>Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfTimesOccured__c</fullName>
        <label>Number of Times Occured</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <label>Organization Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSCallingApplication__c</fullName>
        <label>WS CallingApplication</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSCallingArea__c</fullName>
        <label>WS CallingArea</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSTransactionID__c</fullName>
        <label>WS TransactionID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isHandled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Handled</label>
        <type>Checkbox</type>
    </fields>
    <label>Exception Log</label>
    <nameField>
        <label>Exception Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>